--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  google_nav_bar: ^3.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
